# VoiceCoach

./: Ai-input-Electron.md  CLAUDE-CRITICAL-RULES.md  CLAUDE-DIRECT-PROCESSING-IMPLEMENTATION.md  CLAUDE-MISTAKES-LOG.md  CLAUDE-PROCESS-IMPROVEMENTS.md  CLAUDE-PROJECT-CONTEXT.md  CLAUDE-SOP-SYSTEM.md  CLAUDE-SUCCESS-PATTERNS.md  CLAUDE-TESTER-AGENT-FINAL-REPORT.md  CLAUDE.md  COMMANDS-LEARNED.md  COMPLETE_SALES_PERFORMANCE_ANALYTICS_LOOP.md  CORRECTION-AGENT-SUCCESS-REPORT.md  CRITICAL_FIXES_APPLIED.md  CROSS_PLATFORM_AUDIO_TEST_REPORT.md  DOCUMENT-PERSISTENCE-BUG-FIX-SUMMARY.md  DOCUMENT_PROCESSING_INTEGRATION.md  DOCUMENT_PROCESSING_PIPELINE_INTEGRATION_COMPLETE.md  ELECTRON-MIGRATION-REVIEW-REQUEST.md  ENHANCED_AUDIO_PRODUCTION_DEPLOYMENT_GUIDE.md  ERROR_DETECTION_AGENT_TASK_2_3_SUMMARY.md  FASTER_WHISPER_IMPLEMENTATION_SUMMARY.md  FINAL-VALIDATION-REPORT-TAURI-CLAUDE.md  FINAL-VALIDATION-REPORT.md  GET_WEBKIT_QUALITY_TRANSCRIPTION.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTION_TEMPLATE_SYSTEM_PRD_OVERVIEW.md  INTEGRATION-SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  KNOWLEDGE_ENGINE_README.md  LED-BREADCRUMB-DEBUGGING-GUIDE.md  LED-BREADCRUMB-INTEGRATION-GUIDE.md  LED-DEBUGGING-GUIDE.md  LED-ENHANCED-AUDIO-MONITORING-COMPLETE.md  LED-IMPLEMENTATION-SUMMARY.md  LED-INFRASTRUCTURE-SUMMARY.md  LED-Infrastructure-Documentation.md  LED-PHASE2-IMPLEMENTATION-REPORT.md  LED-VOICECOACH-COACHING-PIPELINE-MONITORING.md  (+48 more)
voicecoach-app/src-tauri/: Cargo.toml  Cargo_complex.toml  Cargo_minimal.toml  build.rs  tauri.conf.json
voicecoach-app/src-tauri/src/: audio_thread.rs  (+27 more)
(+121 files in other folders)
